new gh-pages version

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>RxJSLovesAngular</title>
-  <base href="/star-angular/">
+  <base href="/star-angular">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link href="styles.9dd2a034b0729f9b1786.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.3afe253c2d7ea3ba250f.bundle.js"></script><script type="text/javascript" src="polyfills.0ff47410b0f225a1b463.bundle.js"></script><script type="text/javascript" src="main.cc7567a3f38a253efaf1.bundle.js"></script></body>
+<script type="text/javascript" src="inline.a1ca8f8ababeb9d1612f.bundle.js"></script><script type="text/javascript" src="polyfills.0ff47410b0f225a1b463.bundle.js"></script><script type="text/javascript" src="main.02e0a374e3594f0d1abb.bundle.js"></script></body>
 </html>
